refactor(system-logs): remove generic varargs warnings in table setup